added assets and created new components

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--Web ICON-->
-    <link rel="icon" href="%PUBLIC_URL%/assets/logo.png">
+    <link rel="icon" href="%PUBLIC_URL%/assets/icon.svg">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
 
-    <title>I Dev Portfolio</title>
+    <title>Ingelbert Codes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
